--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@600&family=Playfair+Display&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css" />
     <title>Shino3.net</title>
-</head>
-<body>
-    リソースなど置き場がここです。
-</body>
+  </head>
+  <body>
+    <div class="page">
+      <div class="main-text"> サーモン食うなら <br />柵で買え。 </div>
+    </div>
+  </body>
 </html>
