--- a/index.html
+++ b/index.html
@@ -3,15 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@600&family=Playfair+Display&display=swap" rel="stylesheet">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@600&family=Playfair+Display&display=swap"
+      rel="stylesheet"
+    /> -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="./style.css" />
     <title>Shino3.net</title>
   </head>
   <body>
     <div class="page">
-      <div class="main-text"> サーモン食うなら <br />柵で買え。 </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <img src="./icon.jpg" class="img-fluid w-100" alt="" srcset="" />
+          </div>
+          <div class="col-6">
+            <div class="fs-1">Shino3</div>
+            <div class="fs-3">しのさん</div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
